fix spacing

--- a/jsapp/scss/stylesheets/partials/_registration.scss
+++ b/jsapp/scss/stylesheets/partials/_registration.scss
@@ -331,7 +331,7 @@ form.registration--login > p > span.helptext{
 }
 
 .registration__create-or-forgot {
-  margin: 20px 0;
+  margin: 20px 0 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -339,28 +339,39 @@ form.registration--login > p > span.helptext{
   gap: 10px;
 }
 
+.registration__legal {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.registration__legal::before {
+  content: '';
+  display: block;
+  width: 100%;
+  margin-top: 20px;
+  border-top: 1px solid colors.$kobo-light-storm;
+  opacity: 0.4;
+}
+
+.registration__legal a {
+  text-decoration: none !important;
+  font-size: 12px;
+  opacity: 0.7;
+}
+
+.registration__legal a:hover {
+  text-decoration: underline !important;
+  opacity: 1;
+}
+
 .registration__footer {
   clear: both;
   text-align: center;
-  margin: 20px 10px 10px 10px;
   text-shadow: colors.$kobo-gray-900 0 0 2px; // contrast against photo background
-
-  a {
-    color: colors.$kobo-white;
-
-    &:hover {
-      color: colors.$kobo-light-storm;
-    }
-  }
-
-  .registration__legal {
-    margin: 0 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
 }
 
 .error-message {
